[gd_scene load_steps=4 format=3 uid="uid://sq8ubb0pnw31"]

[ext_resource type="Script" path="res://betting.gd" id="1_31kr4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onpiw"]
bg_color = Color(0.259925, 0.37, 0.2405, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.40745, 0.58, 0.377, 1)

[sub_resource type="SystemFont" id="SystemFont_ia3h7"]
font_names = PackedStringArray("Ink Free")

[node name="BettingUI" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_31kr4")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 288.0
offset_top = 188.0
offset_right = 776.0
offset_bottom = 443.0
theme_override_styles/panel = SubResource("StyleBoxFlat_onpiw")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 394.0
offset_top = 157.0
offset_right = 672.0
offset_bottom = 401.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.552941)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource("SystemFont_ia3h7")
theme_override_font_sizes/font_size = 60
text = "14"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 2
offset_left = 353.0
offset_top = 100.0
offset_right = 699.0
offset_bottom = 344.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.552941)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource("SystemFont_ia3h7")
theme_override_font_sizes/font_size = 40
text = "BET PLEASE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 2
offset_left = 353.0
offset_top = 297.0
offset_right = 746.0
offset_bottom = 349.0
min_value = 14.0
max_value = 28.0
value = 14.0

[node name="Bet" type="Button" parent="."]
layout_mode = 2
offset_left = 415.0
offset_top = 344.0
offset_right = 526.0
offset_bottom = 407.0
text = "Bet"

[node name="Pass" type="Button" parent="."]
layout_mode = 2
offset_left = 542.0
offset_top = 344.0
offset_right = 658.0
offset_bottom = 407.0
text = "Pass"

[connection signal="drag_started" from="HSlider" to="." method="_on_h_slider_drag_started"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Bet" to="." method="_on_bet_pressed"]
[connection signal="pressed" from="Pass" to="." method="_on_pass_pressed"]
